--- a/.github/workflows/pretty-rest.yml
+++ b/.github/workflows/pretty-rest.yml
@@ -17,33 +17,33 @@ jobs:
   build-common:
     name: Build and link common package
     runs-on: self-hosted
-    needs: [init]
+    needs: [build]
     steps:
       - run: npm install && npm run build && npm link
         working-directory: ./src/packages/common
   build-resolver:
     name: Build resolver package
     runs-on: self-hosted
-    needs: [init]
+    needs: [build]
     steps:
       - run: npm install && npm run build
         working-directory: ./src/packages/resolver
   build-express:
     name: Build and link express package
     runs-on: self-hosted
-    needs: [init]
+    needs: [build]
     steps:
       - run: npm install && npm run build && npm link
         working-directory: ./src/packages/express
   build-fetch:
     name: Build and link fetch package
     runs-on: self-hosted
-    needs: [init]
+    needs: [build]
     steps:
       - run: npm install && npm run build && npm link
         working-directory: ./src/packages/fetch
   build:
-    name: Link root package
+    name: Install root deps and link root package
     runs-on: self-hosted
     needs: [init]
     steps:
