--- a/.github/workflows/pretty-rest.yml
+++ b/.github/workflows/pretty-rest.yml
@@ -14,6 +14,12 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 12.x
+  build:
+    name: Install root deps and link root package
+    runs-on: self-hosted
+    needs: [init]
+    steps:
+      - run: npm install && npm link
   build-common:
     name: Build and link common package
     runs-on: self-hosted
@@ -24,27 +30,21 @@ jobs:
   build-resolver:
     name: Build resolver package
     runs-on: self-hosted
-    needs: [build]
+    needs: [build-common]
     steps:
       - run: npm install && npm run build
         working-directory: ./src/packages/resolver
   build-express:
     name: Build and link express package
     runs-on: self-hosted
-    needs: [build]
+    needs: [build-common]
     steps:
       - run: npm install && npm run build && npm link
         working-directory: ./src/packages/express
   build-fetch:
     name: Build and link fetch package
     runs-on: self-hosted
-    needs: [build]
+    needs: [build-common]
     steps:
       - run: npm install && npm run build && npm link
         working-directory: ./src/packages/fetch
-  build:
-    name: Install root deps and link root package
-    runs-on: self-hosted
-    needs: [init]
-    steps:
-      - run: npm install && npm link
