Rewrite to pure ts compiler api

--- a/src/packages/resolver/package.json
+++ b/src/packages/resolver/package.json
@@ -14,7 +14,6 @@
   },
   "dependencies": {
     "@pretty-rest/common": "file:../common",
-    "camelcase": "^6.2.0",
-    "ts-morph": "^10.0.1"
+    "camelcase": "^6.2.0"
   }
 }
