--- a/src/packages/common/package.json
+++ b/src/packages/common/package.json
@@ -9,11 +9,8 @@
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "typescript": "^4.2.3"
-  },
+  "devDependencies": {},
   "dependencies": {
-    "http-status-codes": "^2.1.4",
-    "ts-morph": "^10.0.1"
+    "typescript": "^4.2.3"
   }
 }
