--- a/src/packages/fetch/package.json
+++ b/src/packages/fetch/package.json
@@ -14,7 +14,6 @@
   },
   "dependencies": {
     "@pretty-rest/common": "file:../common",
-    "@pretty-rest/resolver": "file:../resolver",
-    "ts-morph": "^10.0.1"
+    "@pretty-rest/resolver": "file:../resolver"
   }
 }
